# lunch-menu

./: .App.py.swp  .env.dummy.swp  .gitignore  .pdm-python  App.py  README.md  env.dummy  pyproject.toml
note/: Untitled.ipynb  crud.ipynb  endpoints.ipynb  kwargs.ipynb  lunch_menu.ipynb  lunch_name.ipynb  melt.ipynb  예제.ipynb
note/.ipynb_checkpoints/: lunch_menu-checkpoint.csv
pages/: 1_Input.py  2_Check.py  3_chart.py  4_bulk_insert.py  5_Api.py  6_sync.py
src/lunch_menu/: constants.py  db.py
