[project]
name = "lunch-menu"
version = "0.1.1"
description = "Default template for PDM package"
authors = [
    {name = "heejin131", email = "journeyjean131@gmail.com"},
]
dependencies = ["pandas>=2.2.3", 
"matplotlib>=3.10.0", 
"psycopg[binary,pool]>=3.2.4", 
"streamlit>=1.41.1", 
"python-dotenv>=1.0.1"]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[dependency-groups]
eda = [
    "jupyterlab>=4.3.4",
]
test = [
    "pytest>=8.3.4",
]

